[package]
name = "pallet-session-keys"
version = "0.1.0"
description = "Pallet for managing temporary session keys for gaming."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-api = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

# Local dependencies
pallet-qor-identity = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"pallet-balances/std",
]
runtime = ["sp-api"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]