[package]
name = "demiurge-module-drc369"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DRC-369 NFT Standard - Stateful NFTs"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Internal dependencies
demiurge-storage = { path = "../../storage" }
demiurge-modules = { path = ".." }

[dev-dependencies]
