[package]
name = "demiurge-module-energy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Energy Module - Regenerating transaction costs"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Internal dependencies
demiurge-storage = { path = "../../storage" }
demiurge-modules = { path = ".." }

[dev-dependencies]
tempfile = "3.8"
